tests/error/fail_assign.gw
#! [contains] can't assign
class C extends Event{}
Event e @=> C o;
